--- a/js/index.html
+++ b/js/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../image-gallery/assets/style.css">
+    <link rel="stylesheet" href="../assets/style.css">
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </head>
 
@@ -35,13 +35,13 @@
                     Pages
                 </li>
                 <li class="sidebar-item">
-                    <a href="../image-gallery/pages/images.html" class="sidebar-link">
+                    <a href="./pages/images.html" class="sidebar-link">
                         <i class="lni lni-image"></i>
                         <span>Images</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="../image-gallery/pages/wallpapers.html" class="sidebar-link">
+                    <a href="./pages/wallpapers.html" class="sidebar-link">
                         <i class="lni lni-mobile"></i>
                         <span>Wallpapers</span>
                     </a>
@@ -94,7 +94,7 @@
 
         </div>
     </div>
-    <script src="../image-gallery/js/script.js"></script>
+    <script src="../js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
