--- a/pages/index.html
+++ b/pages/index.html
@@ -24,7 +24,7 @@
                     About Me
                 </li>
                 <li class="sidebar-item">
-                    <a href="index.html" class="sidebar-link">
+                    <a href="./index.html" class="sidebar-link">
                         <i class="lni lni-home"></i>
                         <span>Home</span>
                     </a>
@@ -33,13 +33,13 @@
                     Pages
                 </li>
                 <li class="sidebar-item">
-                    <a href="./pages/images.html" class="sidebar-link">
+                    <a href="./images.html" class="sidebar-link">
                         <i class="lni lni-image"></i>
                         <span>Images</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="./pages/wallpapers.html" class="sidebar-link">
+                    <a href="./wallpapers.html" class="sidebar-link">
                         <i class="lni lni-mobile"></i>
                         <span>Wallpapers</span>
                     </a>
