--- a/pages/wallpapers.html
+++ b/pages/wallpapers.html
@@ -17,16 +17,13 @@
     <div class="d-flex">
         <!-- Sidebar -->
         <aside id="sidebar" class="sidebar-toggle">
-            <div class="sidebar-logo">
-                <a href="#"></a>
-            </div>
             <!-- Sidebar Navigation -->
             <ul class="sidebar-nav p-0">
                 <li class="sidebar-header">
                     About Me
                 </li>
                 <li class="sidebar-item">
-                    <a href="../index.html" class="sidebar-link">
+                    <a href="./index.html" class="sidebar-link">
                         <i class="lni lni-home"></i>
                         <span>Home</span>
                     </a>
@@ -35,13 +32,13 @@
                     Pages
                 </li>
                 <li class="sidebar-item">
-                    <a href="../pages/images.html" class="sidebar-link">
+                    <a href="./images.html" class="sidebar-link">
                         <i class="lni lni-image"></i>
                         <span>Images</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="../pages/wallpapers.html" class="sidebar-link">
+                    <a href="./wallpapers.html" class="sidebar-link">
                         <i class="lni lni-mobile"></i>
                         <span>Wallpapers</span>
                     </a>
