--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     
 </head>
@@ -33,13 +33,13 @@
                     Pages
                 </li>
                 <li class="sidebar-item">
-                    <a href="./images.html" class="sidebar-link">
+                    <a href="./pages/images.html" class="sidebar-link">
                         <i class="lni lni-image"></i>
                         <span>Images</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="./wallpapers.html" class="sidebar-link">
+                    <a href="./pages/wallpapers.html" class="sidebar-link">
                         <i class="lni lni-mobile"></i>
                         <span>Wallpapers</span>
                     </a>
