--- a/pages/images.html
+++ b/pages/images.html
@@ -64,10 +64,10 @@
           <img src="../images/photos/alb.jpg"   class="w-100 rounded shadow-sm mt-4" alt="alb" />
           <img src="../images/photos/plane.jpg"     class="w-100 rounded shadow-sm mt-4" alt="Plane" />
           <img src="../images/photos/sky.jpg"       class="w-100 rounded shadow-sm mt-4" alt="Sky"  />
-          <img src="../images/photos/highway.JPG"   class="w-100 rounded shadow-sm mt-4" alt="Highway" />
-          <img src="../images/photos/zoo.JPG"   class="w-100 rounded shadow-sm mt-4" alt="zoo" />
-          <img src="../images/photos/flower.JPG"   class="w-100 rounded shadow-sm mt-4" alt="flower" />
-          <img src="../images/photos/vctree.JPG"   class="w-100 rounded shadow-sm mt-4" alt="tree" />
+          <img src="../images/photos/highway.jpg"   class="w-100 rounded shadow-sm mt-4" alt="Highway" />
+          <img src="../images/photos/zoo.jpg"   class="w-100 rounded shadow-sm mt-4" alt="zoo" />
+          <img src="../images/photos/flower.jpg"   class="w-100 rounded shadow-sm mt-4" alt="flower" />
+          <img src="../images/photos/vctree.jpg"   class="w-100 rounded shadow-sm mt-4" alt="tree" />
           <img src="../images/photos/wtaxi.jpg"   class="w-100 rounded shadow-sm mt-4" alt="wtaxi" />
         </div>
 
@@ -75,8 +75,8 @@
           <img src="../images/photos/sp.jpg"   class="w-100 rounded shadow-sm mt-4" alt="seaplane" />
           <img src="../images/photos/mountain.jpg"  class="w-100 rounded shadow-sm mt-4" alt="Mountain" />
           <img src="../images/photos/usa.jpg"       class="w-100 rounded shadow-sm mt-4" alt="USA" />
-          <img src="../images/photos/alsonyc.JPG"   class="w-100 rounded shadow-sm mt-4" alt="nyctoo" />
-          <img src="../images/photos/rest.JPG"   class="w-100 rounded shadow-sm mt-4" alt="other" />
+          <img src="../images/photos/alsonyc.jpg"   class="w-100 rounded shadow-sm mt-4" alt="nyctoo" />
+          <img src="../images/photos/rest.jpg"   class="w-100 rounded shadow-sm mt-4" alt="other" />
           <img src="../images/photos/leaves.jpg"   class="w-100 rounded shadow-sm mt-4" alt="leaves" />
       
         </div>
@@ -84,10 +84,10 @@
 
         <div class="col-lg-4 col-md-6">
           <img src="../images/photos/bc.jpg"   class="w-100 rounded shadow-sm mt-4" alt="BC" />
-          <img src="../images/photos/dt.JPG"        class="w-100 rounded shadow-sm mt-4" alt="Downtown" />
-          <img src="../images/photos/nyc.JPG"   class="w-100 rounded shadow-sm mt-4" alt="Nyc" />
-          <img src="../images/photos/saudi.JPG"   class="w-100 rounded shadow-sm mt-4" alt="Saudi" />
-          <img src="../images/photos/pic.JPG"   class="w-100 rounded shadow-sm mt-4" alt="Gallery" />
+          <img src="../images/photos/dt.jpg"        class="w-100 rounded shadow-sm mt-4" alt="Downtown" />
+          <img src="../images/photos/nyc.jpg"   class="w-100 rounded shadow-sm mt-4" alt="Nyc" />
+          <img src="../images/photos/saudi.jpg"   class="w-100 rounded shadow-sm mt-4" alt="Saudi" />
+          <img src="../images/photos/pic.jpg"   class="w-100 rounded shadow-sm mt-4" alt="Gallery" />
           <img src="../images/photos/plannnn.jpg"   class="w-100 rounded shadow-sm mt-4" alt="plane" />
 
           
