--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    
+
 </head>
 
 <body>
@@ -24,9 +24,9 @@
                     About Me
                 </li>
                 <li class="sidebar-item">
-                    <a href="./index.html" class="sidebar-link">
-                        <i class="lni lni-home"></i>
-                        <span>Home</span>
+                    <a href="./index.html" class="sidebar-link-active">
+                        <i class=""></i>
+                        <span>- Home</span>
                     </a>
                 </li>
                 <li class="sidebar-header">
@@ -34,14 +34,14 @@
                 </li>
                 <li class="sidebar-item">
                     <a href="./pages/images.html" class="sidebar-link">
-                        <i class="lni lni-image"></i>
-                        <span>Images</span>
+                        <i class=""></i>
+                        <span>- Images</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
                     <a href="./pages/wallpapers.html" class="sidebar-link">
-                        <i class="lni lni-mobile"></i>
-                        <span>Wallpapers</span>
+                        <i class=></i>
+                        <span>- Wallpapers</span>
                     </a>
                 </li>
             </ul>
@@ -53,28 +53,40 @@
         <div class="main">
             <nav class="navbar navbar-expand">
                 <button class="toggler-btn" type="button">
-                    <i class="lni lni-text-align-left"></i>
+                    <i class="lni lni-text-align-justify"></i>
                 </button>
             </nav>
             <main class="p-3">
                 <div class="container-fluid">
-                    <h1 class="mb-3 text-center">  <span id="addedHeader" style="color:#faa153;">Passion Project: </span>Image Gallery</h1>
+                    <h1 class="mb-3 text-center"> <span id="addedHeader" style="color:#faa153;">Passion Project:
+                        </span>Image Gallery</h1>
 
                     <div class="container text-start">
                         <div class="row">
                             <div class="col mt-4 text-body mb-5">
-                                <p style="color: black;">
+                                <p>
                                     I am a fourth-year
                                     <span id="roleDescription" class="multiple-text" style="color:#faa153;"></span>
-                                    with a few years of experience delivering web apps, data-driven dashboards, and
-                                    leveraging Microsoft AI platforms through various work expereiences.
+                                    with a few years of experience delivering websites, applications, mock-ups,
+                                    data-driven dashboards, and
+                                    leveraging Microsoft AI platforms through various work experiences.
                                     This image gallery is my latest side project—a space where I blend front-end craft
                                     with the images and wallpapers
-                                    I've captured over the years to deliver high-resolution visuals.
-                                    Based in Toronto, Ontario, Canada.
+                                    I've captured/created over the years to deliver high-resolution visuals.
+                                    Based in <span id="addedHeader" style="color:#faa153;">Toronto,</span> Ontario,
+                                    Canada.
                                 </p>
                             </div>
+
                         </div>
+                        <div class="row">
+                            <div class="col mt-4 text-body mb-5">
+
+                                <img src="./images/photos/frontpage.jpg" class="img-fluid" alt="...">
+                            </div>
+
+                        </div>
+
                     </div>
 
                     <div class="container text-start">
